--- a/random-generator/index.html
+++ b/random-generator/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Generator</title>
+    <title>Random Joke Generator</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="container">
+        <div class="joke"></div>
+        <button>Get a Dad Joke</button>
+      </div>
+    </section>
+    <script src="main.js"></script>
+  </body>
 </html>
