joke generator api
added styles

--- a/random-generator/index.html
+++ b/random-generator/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Joke Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section>
       <div class="container">
-        <div class="joke"></div>
+        <div class="joke">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            praesentium minima corporis similique. Praesentium cumque quo
+            voluptates aliquid. Soluta, non similique. Ullam dicta rem cum ex
+            excepturi et enim. Laborum aspernatur animi eius asperiores dolore.
+            Assumenda voluptates reiciendis, modi ex ab temporibus veritatis
+            nemo ut nihil, quidem nesciunt, autem adipisci.
+          </p>
+        </div>
         <button>Get a Dad Joke</button>
       </div>
     </section>
