--- a/API numbers/index.html
+++ b/API numbers/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interesting Fact with API Numbers</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="container">
+        <form>
+          <input type="number" placeholder="Enter a number" />
+          <button type="submit">Submit</button>
+        </form>
+        <div class="number-fact">
+          Give me a number and I will tell you an interesting fact about it
+        </div>
+      </div>
+    </section>
+    <script src="main.js"></script>
+  </body>
 </html>
