--- a/API numbers/index.html
+++ b/API numbers/index.html
@@ -20,7 +20,7 @@
           <button type="submit">Submit</button>
         </form>
         <div class="number-fact">
-          Give me a number and I will tell you an interesting fact about it
+          Give me a number and I will tell you an interesting fact about it🐙
         </div>
       </div>
     </section>
