--- a/dummy/index.html
+++ b/dummy/index.html
@@ -4,11 +4,150 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+<link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="parent">
-      <div class="box"></div>
+    <!-- header -->
+
+    <header class="page-header">
+        <nav class="container main-nav">
+          <a href="" class="logo">
+            <img src="" alt="" />
+            photo
+          </a>
+  
+          <ul class="site-nav list">
+            <li class="item"><a href="#" class="link">Features</a></li>
+            <li class="item"><a href="#" class="link">Pricing</a></li>
+            <li class="item"><a href="#" class="link">Community</a></li>
+            <li class="item"><a href="#" class="link">Support</a></li>
+          </ul>
+  
+          <ul class="auth-nav list">
+            <li class="item"><a href="#" class="button secondary">Log in</a></li>
+            <li class="item"><a href="#" class="button primary">Register</a></li>
+          </ul>
+        </nav>
+
+    </header>
+ 
+    <main>
+          <!-- Hero -->
+    <div>
+      <section class="hero">
+        <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+        <a href="#" class="button primary">Join today</a>
+      </section>
     </div>
+
+    <!-- Features -->
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Snap photos and share like <br>never before</br></h2>
+
+        <ul class="feature-list list">
+          <li>
+            <h3 class="title">Lorem, ipsum dolor.</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
+            <a href="#" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Lorem, ipsum dolor.</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
+            <a href="#" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Lorem, ipsum dolor.</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
+            <a href="#" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Lorem, ipsum dolor.</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
+            <a href="#" class="button secondary">Learn more</a>
+          </li>
+        </ul>
+      </div>
+
+    </section>
+    <!-- Examples-->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Examples</h2>
+      <ul class="work-list list">
+        <li class="item">
+          <img src="#" alt="example">
+          <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat vitae itaque quas praesentium blanditiis natus tempora numquam nihil, accusantium aliquid sit aut illum, reprehenderit quam harum obcaecati quia illo!</p>
+        </li>
+        <li class="item">
+          <img src="#" alt="example">
+          <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat vitae itaque quas praesentium blanditiis natus tempora numquam nihil, accusantium aliquid sit aut illum, reprehenderit quam harum obcaecati quia illo!</p>
+        </li>
+      </ul>
+      </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section>
+<div class="container">
+  <h2 class="section-title">Your're in good company</h2>
+  <p class="section-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos neque veniam corporis ad ullam deleniti.</p>
+
+  <ul class="list">
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+    <li><img src="#" alt="testimonial"></li>
+  </ul>
+</div>
+    </section>
+
+    <!-- signup-->
+    <section class="section">
+      <div class="container">
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum harum perferendis, dolor quod earum repellat.</p>
+      <div>
+        <a href="#">Join Today</a>
+        <a href="#">Contact us</a>
+      </div>
+    </div>
+    </section>
+    </main>
+
+    <footer>
+      <ul class="list">
+        <li><a href="#">Mobile app</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#">Company</a></li>
+      </ul>
+
+      <a href="#"><img src="" alt="" class="logo"></a>
+
+      <ul class="list">
+        <li><a href="#">Help desk</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Resources</a></li>
+      </ul>
+
+      <ul class="list">
+        <li><a href="#" aria-label="Ссылки на Facebook">Facebook</a></li>
+        <li><a href="#" aria-label="Ссылки на Twitter">Twitter</a></li>
+        <li><a href="#" aria-label="Ссылки на Instagram">Instagram</a></li>
+        <li><a href="#" aria-label="Ссылки на LinkedIn">LinkedIn</a></li>
+      </ul>
+
+      <p>&copy; &#169; Photo, Inc. 2019. We love our users!</p>
+    </footer>
   </body>
 </html>
