--- a/dummy/index.html
+++ b/dummy/index.html
@@ -51,22 +51,22 @@
         <h2 class="section-title">Snap photos and share like <br>never before</br></h2>
 
         <ul class="feature-list list">
-          <li>
+          <li class="item">
             <h3 class="title">Lorem, ipsum dolor.</h3>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
             <a href="#" class="button secondary">Learn more</a>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Lorem, ipsum dolor.</h3>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
             <a href="#" class="button secondary">Learn more</a>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Lorem, ipsum dolor.</h3>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
             <a href="#" class="button secondary">Learn more</a>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Lorem, ipsum dolor.</h3>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio commodi ea eum asperiores, optio quisquam sit adipisci quidem maxime vitae voluptatibus fuga ipsum culpa.</p>
             <a href="#" class="button secondary">Learn more</a>
@@ -82,13 +82,17 @@
       <ul class="work-list list">
         <li class="item">
           <img src="#" alt="example">
-          <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
+          <div class="content">
+            <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat vitae itaque quas praesentium blanditiis natus tempora numquam nihil, accusantium aliquid sit aut illum, reprehenderit quam harum obcaecati quia illo!</p>
+          </div>
         </li>
         <li class="item">
           <img src="#" alt="example">
-          <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
+          <div class="content">
+            <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, illo?</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat vitae itaque quas praesentium blanditiis natus tempora numquam nihil, accusantium aliquid sit aut illum, reprehenderit quam harum obcaecati quia illo!</p>
+          </div>
         </li>
       </ul>
       </div>
@@ -100,7 +104,7 @@
   <h2 class="section-title">Your're in good company</h2>
   <p class="section-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos neque veniam corporis ad ullam deleniti.</p>
 
-  <ul class="list">
+  <ul class="client-list list">
     <li><img src="#" alt="testimonial"></li>
     <li><img src="#" alt="testimonial"></li>
     <li><img src="#" alt="testimonial"></li>
