--- a/dummy/index.html
+++ b/dummy/index.html
@@ -72,6 +72,15 @@
             <a href="#" class="button secondary">Learn more</a>
           </li>
         </ul>
+        <a href="#" class="btn-test">Fast start</a>
+        <ul>
+          <li class="list-item">
+            <h2 class="title">Test</h2>
+            <p class="text">Test</p>
+          </li>
+          <!--Content image - image
+          decorative - before or after-->
+        </ul>
       </div>
 
     </section>
