--- a/dummy/index.html
+++ b/dummy/index.html
@@ -46,6 +46,11 @@
 
     <!-- Features -->
 
+    <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+<svg class="icon-svg" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+<path class="letter background" d="M3 13.6493C3 16.6044 5.41766 19 8.4 19L16.5 19C18.9853 19 21 16.9839 21 14.4969C21 12.6503 19.8893 10.9449 18.3 10.25C18.1317 7.32251 15.684 5 12.6893 5C10.3514 5 8.34694 6.48637 7.5 8.5C4.8 8.9375 3 11.2001 3 13.6493Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
     <section class="section">
       <div class="container">
         <h2 class="section-title">Snap photos and share like <br>never before</br></h2>
@@ -136,6 +141,12 @@
       </div>
     </div>
     </section>
+
+    <ul class="actions">
+      <li class="icon-one"><button></button></li>
+      <li class="icon-two"><button></button></li>
+      <li></li>
+    </ul>
     </main>
 
     <footer>
