--- a/dummy/index.html
+++ b/dummy/index.html
@@ -143,8 +143,16 @@
     </section>
 
     <ul class="actions">
-      <li class="icon-one"><button></button></li>
-      <li class="icon-two"><button></button></li>
+      <li><button class="button">
+        <svg class="button-icon" width="40px" height="40px">
+          <use href="symbol-defs.svg#icon-cloud-fog-svgrepo-com"></use>
+        </svg>
+      </button></li>
+      <li><button class="button">
+        <svg class="button-icon" width="60px" height="60px">
+          <use href="symbol-defs.svg#icon-cloud-svgrepo-com"></use>
+        </svg>
+      </button></li>
       <li></li>
     </ul>
     </main>
